test/client/shm_client.h

#ifndef SHM_CLIENT_H
#define SHM_CLIENT_H

#include "../../shm_wrapper/shm_wrapper.h"

void start_shm ();

void stop_shm ();

void print_shm ();

#endif